# apm-agent-python

./: .appveyor.yml  .dockerignore  .editorconfig  .flake8  .gitignore  .hound.yml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .tool-versions  .travis.old.yml  .travis.yml  AGENTS.md  AUTHORS  CHANGELOG.asciidoc  CHANGELOG.md  CHANGES  CHANGES.md  CONTRIBUTING.md  Dockerfile  Dockerfile.wolfi  DockerfileDocs  DockerfileLint  Jenkinsfile  LICENSE  MANIFEST.in  Makefile  NOTICE.md  README.rst  SECURITY.md  appveyor.yml  codecov.yml  conftest.py  docker-compose.yml  pyproject.toml  renovate.json  runtests.py  setup.cfg  setup.py  skaffold.yaml  tox.ini  (+1 more)
.ci/: .jenkins_exclude.yml  .jenkins_framework.yml  .jenkins_framework_dependencies.yml  .jenkins_framework_full.yml  .jenkins_framework_tmp.yml  .jenkins_python.yml  .jenkins_python_full.yml  .jenkins_windows.yml  .matrix_exclude.yml  .matrix_framework.yml  .matrix_framework_fips.yml  .matrix_framework_full.yml  .matrix_python.yml  .matrix_python_fips.yml  .matrix_python_full.yml  .matrix_windows.yml  Jenkinsfile  bench.sh  create-arn-table.sh  dependabot.yml  downstreamTests.groovy  linting.groovy  nightly.groovy  packer_cache.sh  publish-aws.sh  snapshoty.yml  update-gherkin-specs.yml  update-json-specs.yml  update-specs.yml
.ci/docker/: README.md  util.sh
.ci/jobs/: apm-agent-python-downstream.yml  apm-agent-python-linting-mbp.yml  apm-agent-python-mbp.yml  apm-agent-python-mbp0.yml  apm-agent-python-nightly-mbp.yml  apm-agent-python.yml  defaults.yml  downstream-python-tests-mbp.yml  elastic+apm-agent-python+master+multijob+periodic-full-matrix-tests.yml  elastic+apm-agent-python+master+periodic-full-matrix.yml
.ci/k8s/: PythonPod.yml
.ci/updatecli/: values.yml
.ci/updatecli.d/: update-gherkin-specs.yml  update-json-specs.yml  update-specs.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler-config.yml
.github/ISSUE_TEMPLATE/: Bug_report.md
.github/workflows/: README.md  addToProject.yml  build-distribution.yml  build-images.yml  docs-build.yml  docs-cleanup.yml  k8s.yml  labeler.yml  matrix-command.yml  microbenchmark.yml  opentelemetry.yml  packages.yml  pre-commit.yml  release-trusted.yml  release.yml  run-matrix.yml  sbom.yml  snapshoty.yml  test-docs.yml  test-fips.yml  test-release.yml  test-reporter.yml  test.yml  update-specs.yml  updatecli.yml
.k8s/: .dockerignore  Dockerfile  Makefile  PythonPod.yml  PythonPod1.yml  PythonPod2.yml  README.md  cli.py  commands.py  exceptions.py  k8s.py  manifest.yaml.tmpl  profile.yaml.tmpl  requirements.txt  skaffold.py  templates.py  test_commands.py  utils.py  wait.sh
.k8s/templates/: default.yaml  default.yaml.tmpl  framework.profile.yaml.tmpl  manifest.yaml.tmpl  profile.yaml.tmpl  python.profile.yaml.tmpl  skaffold.yaml  skaffold.yaml.tmpl
dev-utils/: make-distribution.sh  make-packages.sh  requirements.txt
docs/: advanced-topics.asciidoc  aiohttp-server.asciidoc  api.asciidoc  asgi-middleware.asciidoc  automatic-instrumentation.asciidoc  conf.py  configuration.asciidoc  custom-instrumentation.asciidoc  django.asciidoc  docset.yml  flask.asciidoc  getting-started-with-django.asciidoc  getting-started.asciidoc  grpc.asciidoc  how-the-agent-works.asciidoc  index.asciidoc  index.rst  logging.asciidoc  metrics.asciidoc  opentelemetry.asciidoc  opentracing.asciidoc  page_header.html  redirects.asciidoc  release-notes.asciidoc  run-tests-locally.asciidoc  sanic.asciidoc  sanic.html  sanitizing-data.asciidoc  serverless-azure-functions.asciidoc  serverless-lambda.asciidoc  serverless.asciidoc  set-up.asciidoc  starlette.asciidoc  supported-technologies.asciidoc  tornado.asciidoc  troubleshooting.asciidoc  tuning.asciidoc  upgrading.asciidoc  usage.rst  wrapper.asciidoc
docs/config/: celery.rst  django.rst  flask.rst  index.rst  logbook.rst  logging.rst  other.rst  pylons.rst  pyramid.rst  wsgi.rst  zerorpc.rst
docs/contributing/: index.rst
docs/install/: index.rst
docs/lambda/: configure-lambda-widget.asciidoc  configure-lambda.asciidoc  python-arn-replacement.asciidoc
docs/reference/: advanced-topics.md  aiohttp-server-support.md  api-reference.md  asgi-middleware.md  azure-functions-support.md  configuration.md  django-support.md  flask-support.md  how-agent-works.md  index.md  instrumenting-custom-code.md  lambda-support.md  logs.md  metrics.md  opentelemetry-api-bridge.md  performance-tuning.md  run-tests-locally.md  sanic-support.md  sanitizing-data.md  set-up-apm-python-agent.md  starlette-support.md  supported-technologies.md  toc.yml  tornado-support.md  upgrading-4-x.md  upgrading-4.x.md  upgrading-5-x.md  upgrading-5.x.md  upgrading-6-x.md  upgrading-6.x.md  upgrading.md  wrapper-support.md
docs/release-notes/: breaking-changes.md  deprecations.md  index.md  known-issues.md  release-notes.md  toc.yml
elasticapm/: __init__.py  base.py  events.py  middleware.py  processors.py  traces.py  version.py
opbeat/: __init__.py  base.py  events.py  middleware.py  processors.py  traces.py  transport.py  version.py
opbeat_python/: __init__.py  base.py  events.py  middleware.py  processors.py  transport.py
scripts/: build_docs.sh  install-python.ps1  install-tools.bat  install.bat  run-benchmarks.sh  run-tests.bat  test-script.bat
test_requirements/: requirements-base.txt  requirements-django-1.10.txt  requirements-django-1.2.txt  requirements-django-1.3.txt  requirements-django-1.4.txt  requirements-django-1.5.txt  requirements-django-1.6.txt  requirements-django-1.7.txt  requirements-django-1.8.txt  requirements-django-1.9.txt  requirements-django-master.txt  requirements-flask-0.10.txt  requirements-flask-0.12.txt  requirements-flask-0.8.txt  requirements-flask-0.9.txt  requirements-python-2.txt  requirements-python-3.txt  requirements-zerorpc.txt
tests/: .jenkins_exclude.yml  .jenkins_framework.yml  .jenkins_framework_full.yml  .jenkins_python.yml  Dockerfile  DockerfileDocs  conftest.py  docker-compose.yml  entrypoint.sh  fixtures.py  helpers.py
travis/: build_manylinux_wheels.sh  run_docker.sh  run_tests.sh
(+768 files in other folders)
