[nosetests]
exclude=^(start|stop)_test_server
verbose=2

[bdist_wheel]
universal=0

[metadata]
license_file = LICENSE

[tool:pytest]
python_files=tests.py test_*.py *_tests.py
isort_ignore=
    elasticapm/transport/asyncio.py
    elasticapm/contrib/asyncio/client.py
markers =
    integrationtest: mark a test as integration test that accesses a service (like postgres, mongodb etc.)
    bdd: mark a test as behavioral test
    requests: mark a test as test of the requests library instrumentation
    boto3: mark a test as test of the boto3 library instrumentation
    elasticsearch: mark a test as elasticsearch test
    django
    flask
    gevent
    eventlet
    celery
    opentracing
    zerorpc
    cassandra
    psycopg2
    mongodb
    memcached
    redis
    psutil
    mysql_connector
    pymysql
    mysqldb
    mysqlclient
    pymssql
    aiohttp
    aiopg
    tornado
    starlette

[isort]
line_length=120
indent='    '
not_skip=__init__.py
skip=wrapt,setup.py,build,src,elasticapm/__init__.py
multi_line_output=3
include_trailing_comma=true
known_standard_library=importlib,types,asyncio,contextvars
known_django=django
known_first_party=elasticapm,tests
known_third_party=StringIO,__pypy__,aiohttp,async_timeout,boto3,cachetools,cassandra,celery,certifi,elasticsearch,flask,jinja2,jsonschema,logbook,memcache,mock,pkg_resources,psycopg2,psycopg2cffi,pymongo,pytest,pytest_localserver,redis,requests,setuptools,simplejson,twisted,urllib2,urllib3,urllib3_mock,urlparse,uwsgi,webob,werkzeug,zope,asynctest,opentracing,eventlet,tornado,starlette,multidict,pytest_bdd,pymemcache
default_section=FIRSTPARTY
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[coverage:run]
include =
    elasticapm/*
    tests/*
omit =
    elasticapm/utils/wrapt/*

[coverage:paths]
source =
    ./
    /app/
    C:\Users\jenkins\workspace\*\src\github.com\elastic\apm-agent-python
