[nosetests]
exclude=^(start|stop)_test_server
verbose=2

[bdist_wheel]
universal=0

[metadata]
license_file = LICENSE
name = elastic-apm
url = https://github.com/elastic/apm-agent-python
author = Elastic, Inc
description = The official Python module for Elastic APM
long_description = file: README.rst
license = BSD
classifiers =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Operating System :: OS Independent
    Topic :: Software Development
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: BSD License
project_urls =
    Documentation = https://www.elastic.co/guide/en/apm/agent/python/current/index.html
    Release notes = https://www.elastic.co/guide/en/apm/agent/python/current/release-notes.html
    Source = https://github.com/elastic/apm-agent-python
    Tracker = https://github.com/elastic/apm-agent-python/issues

[options]
python_requires = >=3.6, <4
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    urllib3
    certifi
test_suite=tests
tests_require =
    pytest==4.6.9
    py==1.8.1
    more-itertools==4.1.0
    pluggy==0.13.1
    pytest-django==3.8.0
    atomicwrites==1.1.5
    coverage==5.0.3
    pytest-cov==2.8.1
    pytest-localserver==0.5.0
    pytest-mock==2.0.0
    pytest-benchmark==3.2.2
    jsonschema==2.6.0
    configparser==4.0.2
    contextlib2==0.6.0
    importlib-metadata==1.5.0
    packaging==20.1
    Mako==1.1.0
    glob2==0.7
    parse==1.15.0
    parse-type==0.5.2
    pytest-bdd==3.2.1
    pytest-rerunfailures==8.0


    docutils==0.14
    pathlib==1.0.1
    py-cpuinfo==3.3.0
    statistics==1.0.3.5

    urllib3
    certifi
    Jinja2
    Logbook
    MarkupSafe
    WebOb
    Werkzeug
    anyjson
    argparse
    blinker>=1.1
    greenlet
    itsdangerous
    mock
    msgpack-python
    pep8
    pytz

    pytest-asyncio==0.10.0 ; python_version >= '3.7'
    asynctest==0.12.2 ; python_version >= '3.7'
    aiohttp ; python_version >= '3.7'
    tornado ; python_version >= '3.7'
    starlette ; python_version >= '3.7'
    pytest-asyncio ; python_version >= '3.7'
    pytest-mock ; python_version >= '3.7'
    httpx ; python_version >= '3.6'


[options.extras_require]
flask =
    blinker
aiohttp =
    aiohttp
tornado =
    tornado
starlette =
    starlette
opentracing =
    opentracing>=2.0.0

[options.packages.find]
exclude =
    tests
    tests.*

[tool:pytest]
python_files=tests.py test_*.py *_tests.py
markers =
    integrationtest: mark a test as integration test that accesses a service (like postgres, mongodb etc.)
    bdd: mark a test as behavioral test
    requests: mark a test as test of the requests library instrumentation
    boto3: mark a test as test of the boto3 library instrumentation
    elasticsearch: mark a test as elasticsearch test
    django
    flask
    gevent
    eventlet
    celery
    opentracing
    zerorpc
    cassandra
    psycopg2
    mongodb
    memcached
    redis
    psutil
    mysql_connector
    pymysql
    mysqldb
    mysqlclient
    pymssql
    pyodbc
    aiohttp
    aiopg
    asyncpg
    tornado
    starlette
    graphene
    httpx
    prometheus_client

[isort]
line_length=120
skip=wrapt,setup.py,build,src,elasticapm/__init__.py
multi_line_output=3
include_trailing_comma=true

[coverage:run]
include =
    elasticapm/*
    tests/*
omit =
    elasticapm/utils/wrapt/*

[coverage:paths]
source =
    ./
    /app/
    C:\Users\jenkins\workspace\*\src\github.com\elastic\apm-agent-python
