[bdist_wheel]
universal=1

[metadata]
license_file = LICENSE
name = elastic-apm
url = https://github.com/elastic/apm-agent-python
author = Elastic, Inc
description = The official Python module for Elastic APM
long_description = file: README.rst
license = BSD
classifiers =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Operating System :: OS Independent
    Topic :: Software Development
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: BSD License
project_urls =
    Documentation = https://www.elastic.co/guide/en/apm/agent/python/current/index.html
    Release notes = https://www.elastic.co/guide/en/apm/agent/python/current/release-notes.html
    Source = https://github.com/elastic/apm-agent-python
    Tracker = https://github.com/elastic/apm-agent-python/issues

[options]
python_requires = >=3.6, <4
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    urllib3!=2.0.0,<3.0.0
    certifi
    wrapt>=1.14.1,!=1.15.0  # https://github.com/elastic/apm-agent-python/issues/1894
    ecs_logging
test_suite=tests

[options.entry_points]
console_scripts =
    elasticapm-run = elasticapm.instrumentation.wrapper:setup

[options.extras_require]
flask =
    blinker
aiohttp =
    aiohttp
tornado =
    tornado
starlette =
    starlette
opentracing =
    opentracing>=2.0.0
sanic =
    sanic
opentelemetry =
    opentelemetry-api
    opentelemetry-sdk

[options.packages.find]
exclude =
    tests
    tests.*

[tool:pytest]
python_files=tests.py test_*.py *_tests.py
markers =
    integrationtest: mark a test as integration test that accesses a service (like postgres, mongodb etc.)
    bdd: mark a test as behavioral test
    requests: mark a test as test of the requests library instrumentation
    boto3: mark a test as test of the boto3 library instrumentation
    elasticsearch: mark a test as elasticsearch test
    django
    flask
    gevent
    eventlet
    celery
    opentracing
    cassandra
    psycopg2
    mongodb
    memcached
    redis
    aioredis
    psutil
    mysql_connector
    pymysql
    mysqldb
    mysqlclient
    pymssql
    pyodbc
    aiohttp
    aiopg
    aiomysql
    asyncpg
    tornado
    starlette
    graphene
    httpx
    prometheus_client
    sanic
    asgi
    jinja2
    aiobotocore
    kafka
    grpc
    azurestorage
    aiokafka
addopts=--random-order

[isort]
line_length=120
skip=setup.py,build,src,elasticapm/__init__.py
multi_line_output=3
include_trailing_comma=true

[coverage:run]
include =
    elasticapm/*
    tests/*

[coverage:paths]
source =
    ./
    /app/
    C:\Users\jenkins\workspace\*\src\github.com\elastic\apm-agent-python
    D:\a\apm-agent-python\apm-agent-python
